--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: flutter test
 
       - name: Run Integration Tests
-        run: flutter test integration_test/app_test.dart
+        run: flutter test integration_test/app_test.dart -d all
 
       - run: flutter build apk
       - name: List contents of flutter-apk directory
