run cicd after 5 min

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,14 @@
 name: Flutter CICD Pipeline
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    -"*/5 * * * *"
+  branches:
+    -main
+
+
+  #push:
+    #branches:
+      #- main
 
 jobs:
   build:
