--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Flutter CICD Pipeline
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '30 17 * * *'
   #push:
     #branches:
       #- main
